FRAM-181: Enhancement to base API setup